--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="https://t.me/BOTMM88_CSKHBOT">
                         <img src="assets/img/tele-cskh.png" alt="Tele CSKH" class="action-img">
                     </a>
-                    <a href="https://m.me/mm88official.com.vn" target="_blank">
+                    <a href="https://m.me/giaitrimm88vn/" target="_blank">
                         <img src="assets/img/messenger.png" alt="Messenger" class="action-img">
                     </a>
                     <a href="https://t.me/CSDL1MM88">
@@ -96,7 +96,7 @@
                     <a href="https://t.me/addlist/LJOJnZOzGG5iNWZk">
                         <img src="assets/img/tele-tin-nong.png" alt="Tele Tin Nóng" class="action-img">
                     </a>
-                    <a href="https://www.facebook.com/mm88official.com.vn/">
+                    <a href="https://www.facebook.com/giaitrimm88vn/">
                         <img src="assets/img/fanpage.png" alt="Fanpage" class="action-img">
                     </a>
                 </div>
