--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             </div>
             <div class="section-content-small">
                 <div class="action-grid-1x2">
-                    <a href="https://t.me/addlist/LJOJnZOzGG5iNWZk">
+                    <a href="https://t.me/addlist/LJOJnZOzGG5iNWZk" target="_blank">
                         <img src="assets/img/tele-tin-nong.png" alt="Tele Tin Nóng" class="action-img">
                     </a>
-                    <a href="https://www.facebook.com/giaitrimm88vn/">
+                    <a href="https://www.facebook.com/giaitrimm88vn/" target="_blank">
                         <img src="assets/img/fanpage.png" alt="Fanpage" class="action-img">
                     </a>
                 </div>
@@ -110,10 +110,10 @@
             </div>
             <div class="section-content-small">
                 <div class="action-grid-1x2">
-                    <a href="">
+                    <a href="https://mm88notebook.com/">
                         <img src="assets/img/su-dung-usdt.png" alt="Sử Dụng USDT" class="action-img">
                     </a>
-                    <a href="">
+                    <a href="https://mm88notebook.com/">
                         <img src="assets/img/huong-dan-tong.png" alt="Hướng Dẫn Tổng" class="action-img">
                     </a>
                 </div>
