--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <a href="https://mm88notebook.com/">
                         <img src="assets/img/su-dung-usdt.png" alt="Sử Dụng USDT" class="action-img">
                     </a>
-                    <a href="https://mm88notebook.com/guide">
+                    <a href="https://mm88notebook.com/guide/link-truy-cap-toc-do-cao-1">
                         <img src="assets/img/huong-dan-tong.png" alt="Hướng Dẫn Tổng" class="action-img">
                     </a>
                 </div>
