--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             </div>
             <div class="section-content-small">
                 <div class="action-grid-1x2">
-                    <a href="https://t.me/addlist/LJOJnZOzGG5iNWZk" target="_blank">
+                    <a href="https://t.me/addlist/LJOJnZOzGG5iNWZk">
                         <img src="assets/img/tele-tin-nong.png" alt="Tele Tin Nóng" class="action-img">
                     </a>
-                    <a href="https://www.facebook.com/giaitrimm88vn/" target="_blank">
+                    <a href="https://www.facebook.com/giaitrimm88vn/">
                         <img src="assets/img/fanpage.png" alt="Fanpage" class="action-img">
                     </a>
                 </div>
@@ -110,10 +110,10 @@
             </div>
             <div class="section-content-small">
                 <div class="action-grid-1x2">
-                    <a href="https://mm88notebook.com/">
+                    <a href="">
                         <img src="assets/img/su-dung-usdt.png" alt="Sử Dụng USDT" class="action-img">
                     </a>
-                    <a href="https://mm88notebook.com/guide/link-truy-cap-toc-do-cao-1">
+                    <a href="">
                         <img src="assets/img/huong-dan-tong.png" alt="Hướng Dẫn Tổng" class="action-img">
                     </a>
                 </div>
@@ -123,7 +123,7 @@
 
     <!-- Promotional Images Section -->
     <div class="promo-section">
-        <a href="https://link.wild-sound-c240.workers.dev/cskh_live" target="_blank" class="promo-item">
+        <a href="" class="promo-item">
             <img src="assets/img/livestream-girl.gif" alt="Live Nhận Code">
             <div class="promo-text">LIVE NHẬN CODE</div>
         </a>
@@ -145,7 +145,7 @@
         </a>
         <div class="promo-item">
             <img src="assets/img/duoi-hinh-bat-chu.png" alt="Diễn Ra Ngày 30/9">
-            <div class="promo-text">DIỄN RA NGÀY 30/9</div>
+            <div class="promo-text">SẮP DIỄN RA</div>
         </div>
     </div>
     <script src="./logic.js"></script>
