--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Header -->
   <header class="header">
     <div class="header-back">
-      <a href="" class="back-home">
+      <a href="https://mm88-cd-links-mb1.pages.dev/" class="back-home">
         <img src="assets/img/home-back.png" alt="Home" class="home-icon">
         <span>Trở Về<br>Trang Chủ</span>
       </a>
@@ -75,7 +75,7 @@
           <a href="https://88833.com" class="mobile-only">
             <img src="assets/img/link-toc-do-cao.png" alt="Link Tốc Độ Cao" class="action-img">
           </a>
-          <a href="https://mm88a1.com" class="pc-only">
+          <a href="https://mm88-cd-links-mb1.pages.dev/" class="pc-only">
             <img src="assets/img/link-toc-do-cao.png" alt="Link PC" class="action-img">
           </a>
           <a href="tel:0938586333">
