remove link khieu-nai

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
           <a href="tel:0938586333">
             <img src="assets/img/hotline.png" alt="Hotline" class="action-img">
           </a>
-          <a href="https://t.me/mm88khieunai">
+          <!-- https://t.me/mm88khieunai -->
+          <a href="#">
             <img src="assets/img/khieu-nai.png" alt="Khiếu Nại" class="action-img">
           </a>
         </div>
