--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
           <a href="tel:0938586333">
             <img src="assets/img/hotline.png" alt="Hotline" class="action-img">
           </a>
-          <!-- https://t.me/mm88khieunai -->
-          <a href="#">
+          <a href="https://t.me/Khieunaimm888">
             <img src="assets/img/khieu-nai.png" alt="Khiếu Nại" class="action-img">
           </a>
         </div>
