--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <img src="assets/img/lien-minh-kjc.png" alt="Liên Minh KJC">
       <div class="promo-text">LIÊN MINH KJC</div>
     </a>
-    <a href="" class="promo-item">
+    <a href="https://mm88gift.com/" class="promo-item">
       <img src="assets/img/gift.png" alt="Quà Tặng Tri Ân">
       <div class="promo-text">QUÀ TẶNG TRI ÂN</div>
     </a>
