update link live-nhan-code

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
   <!-- Promotional Images Section -->
   <div class="promo-section">
-    <a href="" class="promo-item">
+    <a href="https://live.kjc20250.com/" class="promo-item">
       <img src="assets/img/livestream-girl.gif" alt="Live Nhận Code">
       <div class="promo-text">LIVE NHẬN CODE</div>
     </a>
